--- a/package.json
+++ b/package.json
@@ -1,59 +1,41 @@
 {
-  "name": "extract-json-from-string",
+  "name": "@airthium/extract-json-from-string",
   "description": "Extract JSON/javascript objects from strings",
-  "version": "1.0.1",
-  "main": "lib/extract-json-from-string.js",
+  "version": "0.9.0",
+  "type": "module",
   "scripts": {
-    "test": "gulp",
-    "cover": "nyc --reporter=html --reporter=lcov --reporter=text-summary mocha --timeout=3000 --reporter=dot test/**/*.js",
-    "travis": "gulp ci",
-    "codeclimate": "codeclimate-test-reporter < coverage/lcov-report/index.html"
+    "depcheck": "depcheck .",
+    "prettier": "prettier -l '**/*.{js,ts,json,md}'",
+    "test": "jest --coverage",
+    "build": "swc lib/ --out-dir dist"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/tandrewnichols/extract-json-from-string.git"
+    "url": "https://github.com/Airthium/extract-json-from-string"
   },
   "keywords": [
     "JSON",
-    "objects",
     "extract",
-    "find",
-    "braces",
-    "matching"
+    "objects",
+    "array"
   ],
   "author": {
-    "name": "Andrew Nichols",
-    "email": "tandrewnichols@gmail.com",
-    "url": "www.tandrewnichols.me"
+    "name": "Airthium",
+    "url": "https://github.com/orgs/Airthium/people"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/tandrewnichols/extract-json-from-string/issues"
+    "url": "https://github.com/Airthium/extract-json-from-string/issues"
   },
-  "engines": {
-    "node": ">=0.10.0"
-  },
-  "homepage": "https://github.com/tandrewnichols/extract-json-from-string",
+  "homepage": "https://github.com/Airthium/extract-json-from-string",
   "dependencies": {},
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
-    "eslint-codeframe-formatter": "^1.0.2",
-    "file-manifest": "^2.0.4",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-codeclimate-reporter": "github:tandrewnichols/gulp-codeclimate-reporter",
-    "gulp-eslint": "^4.0.0",
-    "gulp-open": "^2.1.0",
-    "karma": "^2.0.0",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-webpack": "^2.0.9",
-    "mocha": "^4.0.1",
-    "nyc": "^11.4.1",
-    "rimraf": "^2.6.2",
-    "should": "^13.1.3",
-    "webpack": "^3.10.0"
+    "@swc/cli": "0.1.62",
+    "@swc/core": "1.3.37",
+    "@swc/jest": "0.2.24",
+    "@types/jest": "29.4.0",
+    "depcheck": "1.4.3",
+    "jest": "29.4.3",
+    "prettier": "2.8.4"
   }
 }
