--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@airthium'
       - name: Publish Github
-        run: yarn publish
+        run: yarn npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -33,7 +33,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
           scope: '@airthium'
       - name: Publish NPM
-        run: yarn publish --access=public
+        run: yarn npm publish --access=public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
           NPM_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
