--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,5 +36,4 @@ jobs:
       - name: Publish NPM
         run: yarn npm publish --access=public
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
-          NPM_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
+          YARN_NPM_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
