--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@ sonar.projectKey=Airthium_extract-json-from-string
 
 # Tests
 sonar.test.inclusions=**/*.test.tsx
+sonar.coverage.exclusions=jest.config.js
 
 # Coverage
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
