--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
           registry-url: 'https://npm.pkg.github.com'
           scope: '@airthium'
       - name: Publish Github
+        continue-on-error: true
         run: yarn npm publish --access=public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
