--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@airthium/extract-json-from-string",
   "description": "Extract JSON/javascript objects from strings",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "main": "dist/extract-json-from-string.js",
   "type": "module",
   "scripts": {
     "depcheck": "depcheck . --ignores=@swc/jest,@types/jest",
