--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=airthium
 sonar.projectKey=Airthium_extract-json-from-string
 
 # Tests
-sonar.test.inclusions=**/*.test.tsx
+sonar.test.inclusions=**/*.test.ts
 sonar.coverage.exclusions=jest.config.js
 
 # Coverage
